static/css/parts/EditorTabs.css
.MainTabs {
  height: 35px;
  display: flex;
  contain: strict;
  width: 100%;
  margin: 0;
  padding: 0;
  background: var(--TabsBackground); /* TODO variable name should match class name */
  overflow: hidden;
  overflow-x: auto;
  scrollbar-width: none;
  scrollbar-color: transparent transparent;
}

.MainTab {
  border-right: 1px solid var(--TabBorder, rgb(34, 34, 34));
  background: var(--TabBackground);
  color: var(--TabForeground);
  display: flex;
  gap: 4px;
  align-items: center;
  font-size: 13px;
  white-space: nowrap;
  max-width: 200px;
  contain: content;
  height: 100%;
  flex-shrink: 0;
  padding-left: 5px;
  border-bottom: 1px solid transparent;
}

.MainTabPreview {
  font-style: italic;
}

.MainTabSelected {
  border-right: 1px solid var(--TabBorder, rgb(34, 34, 34));
  border-bottom-color: var(--TabBorderBottom, transparent);
  background: var(--TabActiveBackground);
  color: var(--TabActiveForeground);
}

.ManiTabLabel {
  pointer-events: none;
  contain: content;
}

.EditorTabCloseButton {
  contain: strict;
  border: none;
  padding: 0;
  width: 23px;
  height: 23px;
  position: relative;
  background: transparent;
  border-radius: 4px;
  display: flex;
  flex-shrink: 0;
  color: var(--TabForeground);
}

.EditorTabCloseButton:hover {
  background: rgba(255, 255, 255, 0.05);
  transition: all 0.1s;
}

.EditorTabStatus {
  width: 22px;
  height: 15px;
}

/* TODO investigate whether classNames vs data-attribute makes a difference here (performance-wise) */
.EditorTabStatus[data-status='1'] /* default */ {
  display: none;
}

.EditorTabStatus[data-status='2'] /* modified */ {
  background: white;
  mask: url(/packages/renderer-process/assets/icons/circle-filled.svg) 100% 50% / 15px no-repeat;
}

.DragOver {
  background-color: rgba(83, 89, 93, 0.5);
}

.TabLabel {
  white-space: nowrap;
  contain: content;
  overflow: hidden;
  min-width: 0;
  flex: 1;
  pointer-events: none;
}

.TabIcon {
  contain: strict;
  width: 16px;
  height: 16px;
  flex-shrink: 0;
  /* background: currentColor; */
  mask-repeat: no-repeat;
  mask-size: 16px;
  mask-position: 50% 50%;
  pointer-events: none;
}

.TabDragHighlight {
  width: 2px;
  position: absolute;
  top: 0;
  bottom: 0;
  contain: strict;
  background: dodgerblue;
}

.TabTitle {
  pointer-events: none;
  padding-right: 4px;
  contain: content;
}

.EditorContainer {
  width: 100%;
  display: flex;
  contain: strict;
  flex: 1;
}

.iframe-wrapper {
  display: flex;
  flex: 1;
}

.iframe-wrapper iframe {
  flex: 1;
}

.EditorGroupActions {
  display: flex;
  contain: content;
  align-items: center;
  background: var(--TabsBackground);
}

